--- a/pages/homelessness_and_financials.html
+++ b/pages/homelessness_and_financials.html
@@ -2,7 +2,10 @@
     <div class="readable-text">
     <h1 id="homelessness_and_financials">Homelessness, lack of Food, Asylum and Refugees & financial needs</h1>
 
-        <h2 id="worldwide_housing_refugees_and_asylum">Worldwide Help for safe housing (refugees and asylum seekers)</h2>
+        <h2 id="worldwide_housing_refugees_and_asylum">Worldwide Help for safe housing (
+            <span class="highlighted"> refugees and asylum seekers</span>
+            )
+        </h2>
 
         <ul>
             <li>
@@ -115,7 +118,7 @@
         </p>
 
         <p>
-            <b>Need moving funds to get out of Florida/Texas or another state?</b>
+            <b><span class="highlighted">Need moving funds to get out of Florida/Texas or another state?</span></b>
             <ul>
                 <li>
                     HRC relocation help: 
@@ -141,7 +144,7 @@
                     </a>
                 </li>
                 <li>
-                    <b>Youth Runaway Crisis line(call/text)</b>: 
+                    <b><span class="highlighted">Youth Runaway Crisis line(call/text)</span></b>: 
                     <a href="https://www.1800runaway.org/youth-teens">
                         https://www.1800runaway.org/youth-teens
                     </a>
