--- a/pages/index.html
+++ b/pages/index.html
@@ -13,7 +13,7 @@
                     <li>
                         <h4 style="margin: 0px;">
                             <a href="./mental_health.html#crisis_hotlines">
-                                Crisis Hotlines
+                                <span class="highlighted">Crisis Hotlines</span>
                             </a>
                         </h4>
                     </li>
@@ -186,14 +186,14 @@
             <li>
                 <h3 style="margin: 0px;">
                     <a href="./homelessness_and_financials.html#worldwide_housing_refugees_and_asylum">
-                        Homelessness, lack of Food, Asylum and Refugees & financial needs
+                        <span class="highlighted">Homelessness, lack of Food, Asylum and Refugees & financial needs</span>
                     </a>
                 </h3>
                 <ol type="A"> 
                     <li>
                         <h4 style="margin: 0px;">
                             <a href="./homelessness_and_financials.html#refugees_and_asylum_to_us">
-                                LGBT moving funds for safety
+                                <span class="highlighted">LGBT moving funds for safety</span>
                             </a>
                         </h4>
                     </li>
@@ -207,7 +207,7 @@
                     <li>
                         <h4 style="margin: 0px;">
                             <a href="./homelessness_and_financials.html#lgbt_youth_homelessness">
-                                Youth-runaway crisis lines
+                                <span class="highlighted">Youth-runaway crisis lines</span>
                             </a>
                         </h4>
                     </li>
@@ -320,7 +320,7 @@
                     <li>
                         <h4 style="margin: 0px;">
                             <a href="./lgbt_friendly_resources.html#friendly_doctors_and_therapists">
-                                Doctors, Therapists, Businesses
+                                <span class="highlighted">Doctors, Therapists, Businesses</span>
                             </a> 
                         </h4>
                     </li>
@@ -375,7 +375,7 @@
             <li>
                 <h3 style="margin: 0px;">
                     <a href="./legal_help_for_lgbt.html">
-                        Legal Help for LGBT
+                        <span class="highlighted">Legal Help</span> for LGBT
                     </a> 
                 </h3>
                 <ol type="A">
