--- a/pages/lgbt_friendly_resources.html
+++ b/pages/lgbt_friendly_resources.html
@@ -3,7 +3,7 @@
     <h1>Finding an LGBT friendly resource</h1>
 
         <h2 id="friendly_doctors_and_therapists">
-            Where can I find an LGBT friendly doctor or therapist?
+            Where can I find an LGBT friendly doctor or <span class="highlighted">therapist</span>?
         </h2> 
 
         <p>
