--- a/pages/mental_health.html
+++ b/pages/mental_health.html
@@ -183,7 +183,9 @@
             </b><br>
         </p>
 
-        <h3 id="runaway_hotlines"> Youth Runaway Crisis lines </h3>
+        <h3 id="runaway_hotlines"> 
+            <span class="highlighted"> Youth Runaway Crisis lines </span>
+        </h3>
         <p>
             US Call: <b>1-800-RUNAWAY</b> (1-800-786-2929)<br>
             Text:<b>1-800-786-2929</b><br>
