--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             let s:underlay0 = "#2c2c30"
             let s:base = "#161616"
             let s:mantle = "#181825"
-            let s:crust = "#11111b"
+            let s:crust = "#161616"
         -->
         <style>
         .readable-div {
@@ -73,100 +73,112 @@
         .sidebar li {
             padding: 0.5em 2em;
         }
-            @media (max-aspect-ratio: 1/1) {
-                .readable-div {
-                    margin-left: 5%;
-                }
-                .flexbox {
-                    flex-direction: column;
-                    align-items: center;
-                }
-                .box2 {
-                    display: block;
-                    width: 80%;
-                    margin: auto;
-                }
-                .separator-foot {
-                    width: 100%;
-                    margin-left: 0%;
-                }
-                .put-left {
-                    padding-right: 0%;
-                }
-                .sidebar {
-                    display: none;
-                }
+        .highlighted {
+            background-color: #fde3ab;
+            color: #161616;
+        }
+        @media (max-aspect-ratio: 1/1) {
+            .readable-div {
+                margin-left: 5%;
             }
-            @media (prefers-color-scheme: dark) {
-                body {
-                    background-color: #161616;
-                    color: #f8f8f8;
-                }
-                a:link {
-                    color: #75aaff;       
-                    text-decoration: none;
-                }
-                a:visited {
-                    color: #99a4ff;       
-                    text-decoration: none;
-                }
-                a:hover {
-                    text-decoration: underline;
-                }
-                .separator {
-                    background-color: #f8f8f8;
-                }
-                .separator-foot {
-                    background-color: #f8f8f8;
-                }
-                .sidebar {
-                    border-color: #f8f8f8;
-                }
-                .sidebar a {
-                    color: #f8f8f8;
-                }
-                .sidebar li:hover {
-                    text-decoration: underline;
-                    outline-style: solid;
-                    outline-width: 1px;
-                    outline-color: #f8f8f8;
-                }
+            .flexbox {
+                flex-direction: column;
+                align-items: center;
             }
-            @media (prefers-color-scheme: light) {
-                body {
-                    background-color: #f8f8f8;
-                    color: #11111b;
-                }
-                a:link {
-                    color: #2660b4;       
-                    text-decoration: none;
-                }
-                a:visited {
-                    color: #593e9c;       
-                    text-decoration: none;
-                }
-                a:hover {
-                    text-decoration: underline;
-                }
-                .separator {
-                    background-color: #11111b;
-                }
-                .separator-foot {
-                    background-color: #11111b;
-                }
-                .sidebar {
-                    border-color: #161616;
-                }
-                .sidebar a {
-                    color: #11111b;
-                }
-                .sidebar li:hover {
-                    text-decoration: underline;
-                    outline-style: solid;
-                    outline-width: 1px;
-                    outline-color: #11111b;
-                }
+            .box2 {
+                display: block;
+                width: 80%;
+                margin: auto;
             }
+            .separator-foot {
+                width: 100%;
+                margin-left: 0%;
+            }
+            .put-left {
+                padding-right: 0%;
+            }
+            .sidebar {
+                display: none;
+            }
+        }
+        @media (prefers-color-scheme: dark) {
+            body {
+                background-color: #161616;
+                color: #f8f8f8;
+            }
+            a:link {
+                color: #75aaff;       
+                text-decoration: none;
+            }
+            a:visited {
+                color: #99a4ff;       
+                text-decoration: none;
+            }
+            a:hover {
+                text-decoration: underline;
+            }
+            .separator {
+                background-color: #f8f8f8;
+            }
+            .separator-foot {
+                background-color: #f8f8f8;
+            }
+            .sidebar {
+                border-color: #f8f8f8;
+            }
+            .sidebar a {
+                color: #f8f8f8;
+            }
+            .sidebar li:hover {
+                text-decoration: underline;
+                outline-style: solid;
+                outline-width: 1px;
+                outline-color: #f8f8f8;
+            }
+            .highlighted {
+                background-color: #fde3ab;
+                color: #161616;
+            }
+        }
+        @media (prefers-color-scheme: light) {
+            body {
+                background-color: #f8f8f8;
+                color: #161616;
+            }
+            a:link {
+                color: #2660b4;       
+                text-decoration: none;
+            }
+            a:visited {
+                color: #593e9c;       
+                text-decoration: none;
+            }
+            a:hover {
+                text-decoration: underline;
+            }
+            .separator {
+                background-color: #161616;
+            }
+            .separator-foot {
+                background-color: #161616;
+            }
+            .sidebar {
+                border-color: #161616;
+            }
+            .sidebar a {
+                color: #161616;
+            }
+            .sidebar li:hover {
+                text-decoration: underline;
+                outline-style: solid;
+                outline-width: 1px;
+                outline-color: #161616;
+            }
+            .highlighted {
+                background-color: #fde3ab;
+                color: #161616;
+            }
+        }
         </style>
     </head>
     <body>
@@ -185,7 +197,7 @@
                     <li>
                         <h4 style="margin: 0px;">
                             <a href="./mental_health.html#crisis_hotlines">
-                                Crisis Hotlines
+                                <span class="highlighted">Crisis Hotlines</span>
                             </a>
                         </h4>
                     </li>
@@ -358,14 +370,14 @@
             <li>
                 <h3 style="margin: 0px;">
                     <a href="./homelessness_and_financials.html#worldwide_housing_refugees_and_asylum">
-                        Homelessness, lack of Food, Asylum and Refugees & financial needs
+                        <span class="highlighted">Homelessness, lack of Food, Asylum and Refugees & financial needs</span>
                     </a>
                 </h3>
                 <ol type="A"> 
                     <li>
                         <h4 style="margin: 0px;">
                             <a href="./homelessness_and_financials.html#refugees_and_asylum_to_us">
-                                LGBT moving funds for safety
+                                <span class="highlighted">LGBT moving funds for safety</span>
                             </a>
                         </h4>
                     </li>
@@ -379,7 +391,7 @@
                     <li>
                         <h4 style="margin: 0px;">
                             <a href="./homelessness_and_financials.html#lgbt_youth_homelessness">
-                                Youth-runaway crisis lines
+                                <span class="highlighted">Youth-runaway crisis lines</span>
                             </a>
                         </h4>
                     </li>
@@ -492,7 +504,7 @@
                     <li>
                         <h4 style="margin: 0px;">
                             <a href="./lgbt_friendly_resources.html#friendly_doctors_and_therapists">
-                                Doctors, Therapists, Businesses
+                                <span class="highlighted">Doctors, Therapists, Businesses</span>
                             </a> 
                         </h4>
                     </li>
@@ -547,7 +559,7 @@
             <li>
                 <h3 style="margin: 0px;">
                     <a href="./legal_help_for_lgbt.html">
-                        Legal Help for LGBT
+                        <span class="highlighted">Legal Help</span> for LGBT
                     </a> 
                 </h3>
                 <ol type="A">
