beginning of work on homelessness index adjustment. paused until consensus

--- a/pages/homelessness_and_financials.html
+++ b/pages/homelessness_and_financials.html
@@ -2,8 +2,9 @@
     <div class="readable-text">
     <h1 id="homelessness_and_financials">Homelessness, lack of Food, Asylum and Refugees & financial needs</h1>
 
-        <h2 id="worldwide_housing_refugees_and_asylum">Worldwide Help for safe housing (
-            <span class="highlighted"> refugees and asylum seekers</span>
+        <h2 id="worldwide_housing_refugees_and_asylum">
+            Worldwide Help for safe housing (
+            <span class="highlighted">refugees and asylum seekers</span>
             )
         </h2>
 
@@ -34,7 +35,7 @@
             </li>
         </ul>
 
-        <h2 id="refugees_and_asylum_to_us">Moving to the US</h2>
+        <h3 id="refugees_and_asylum_to_us">Moving to the US</h3>
 
         <ul>
             <li>
