--- a/pages/index.html
+++ b/pages/index.html
@@ -186,17 +186,30 @@
             <li>
                 <h3 style="margin: 0px;">
                     <a href="./homelessness_and_financials.html#worldwide_housing_refugees_and_asylum">
-                        <span class="highlighted">Homelessness, lack of Food, Asylum and Refugees & financial needs</span>
+                        <span class="highlighted">
+                            Homelessness, lack of Food, Asylum and Refugees & financial needs
+                        </span>
                     </a>
                 </h3>
                 <ol type="A"> 
                     <li>
                         <h4 style="margin: 0px;">
                             <a href="./homelessness_and_financials.html#refugees_and_asylum_to_us">
-                                <span class="highlighted">LGBT moving funds for safety</span>
+                                Worldwide Help for safe housing (
+                                <span class="highlighted">refugees and asylum seekers</span>
+                                )
                             </a>
                         </h4>
                     </li>
+                    <ol type="I">
+                        <li>
+                            <h5 style="margin: 0px;">
+                                <a href="./homelessness_and_financials.html#refugees_and_asylum_to_us">
+                                    Moving to the US
+                                </a>
+                            </h5>
+                        </li>
+                    </ol>
                     <li>
                         <h4 style="margin: 0px;">
                             <a href="./homelessness_and_financials.html#us_housing">
