simplified links in homelessness

--- a/pages/homelessness_and_financials.html
+++ b/pages/homelessness_and_financials.html
@@ -12,25 +12,25 @@
             <li>
                 Help moving to a safe location: 
                 <a href="https://www.rainbowrailroad.org/request-help">
-                    https://www.rainbowrailroad.org/request-help
+                    rainbowrailroad.org/request-help
                 </a>
             </li>
             <li>
                 Seeking Asylum internationally:<br>
                 <a href="https://www.unhcr.org/us/what-we-do/how-we-work/safeguarding-individuals/lgbtiq-persons">
-                    https://www.unhcr.org/us/what-we-do/how-we-work/safeguarding-individuals/lgbtiq-persons
+                    unhcr.org/ - safeguarding lgbtiq persons
                 </a>
             </li>
             <li>
                 Lgbt asylum seekers: 
                 <a href="https://inreach.org">
-                    https://inreach.org
+                    inreach.org
                 </a>
             </li>
             <li>
                 Seeking help worldwide: 
                 <a href="https://www.oramrefugee.org/seeking-help">
-                    https://www.oramrefugee.org/seeking-help
+                    oramrefugee.org/seeking-help
                 </a>
             </li>
         </ul>
@@ -41,13 +41,13 @@
             <li>
                 Trans Refugees moving to Las Vegas: 
                 <a href="https://www.aplaceformarshaofficial.org">
-                    https://www.aplaceformarshaofficial.org
+                    aplaceformarshaofficial.org
                 </a>
             </li>
             <li>
                 Asylum seekers moving to San Francisco: 
                 <a href="https://www.lgbtasylumproject.org">
-                    https://www.lgbtasylumproject.org
+                    lgbtasylumproject.org
                 </a>
             </li>
         </ul>
@@ -55,7 +55,10 @@
         <div class="separator"></div>
 
         <p>
-            Asylum & refugees (based in Austria): <a href="https://queerbase.at/before-your-flight/">https://queerbase.at/before-your-flight/</a>
+            Asylum & refugees (based in Austria): 
+            <a href="https://queerbase.at/before-your-flight/">
+                queerbase.at/before-your-flight/
+            </a>
         </p>
 
         <div class="separator"></div>
@@ -63,13 +66,13 @@
         <p>
             What is Asylum vs Refugees? <br>
             <a href="https://www.unhcr.org/us/asylum-seekers">
-                https://www.unhcr.org/us/asylum-seekers
+                unhcr.org/us/asylum-seekers
             </a>
         </p>
         <p>
             Trans Lifeline relocation help: 
             <a href="https://translifeline.org/resource_category/relocation-assistance/">
-                https://translifeline.org/resource_category/relocation-assistance/
+                translifeline.org/relocation-assistance/
             </a>
         </p>
 
@@ -84,12 +87,12 @@
             <ul>
                 <li>
                     <a href="https://www.211.org/about-us/your-local-211">
-                        https://www.211.org/about-us/your-local-211
+                        211.org/your-local-211
                     </a>
                 </li>
                 <li>
                     <a href="https://www.findhelp.org/">
-                        https://www.findhelp.org/
+                        findhelp.org/
                     </a>
                 </li>
             </ul>
@@ -100,19 +103,19 @@
                 <li>
                     HUD-Rental assistance, low income housing: 
                     <a href="https://www.hud.gov/topics/rental_assistance">
-                        https://www.hud.gov/topics/rental_assistance
+                        hud.gov/topics/rental_assistance
                     </a>
                 </li>
                 <li>
                     Help moving & housing, finding hrt, and more: 
                     <a href="https://rainbowpassage.org/intake">
-                        https://rainbowpassage.org/intake
+                        rainbowpassage.org/intake
                     </a>
                 </li>
                 <li>
                     LGBT housing,Hrt,food & clothes, jobs help: 
                     <a href="https://transempowerment.org/get-help/">
-                        https://transempowerment.org/get-help/
+                        transempowerment.org/get-help/
                     </a>
                 </li>
             </ul>
@@ -124,13 +127,13 @@
                 <li>
                     HRC relocation help: 
                     <a href="https://www.hrc.org/resources/emergency-funds-for-relocating-families">
-                        https://www.hrc.org/resources/emergency-funds-for-relocating-families
+                        hrc.org/ - emergency funds for relocating families
                     </a>
                 </li>
                 <li>
                     Trans Lifeline relocation help: 
                     <a href="https://translifeline.org/resource_category/relocation-assistance/">
-                        https://translifeline.org/resource_category/relocation-assistance/
+                        translifeline.org/relocation-assistance/
                     </a>
                 </li>
             </ul>
@@ -141,13 +144,13 @@
             <ul>
                 <li>
                     <a href="https://www.thetrevorproject.org/resources/article/resources-for-lgbtq-youth-experiencing-homelessness/">
-                        https://www.thetrevorproject.org/resources/article/resources-for-lgbtq-youth-experiencing-homelessness/
+                        thetrevorproject.org/ - resources for lgbtq youth experiencing homelessness
                     </a>
                 </li>
                 <li>
                     <b><span class="highlighted">Youth Runaway Crisis line(call/text)</span></b>: 
                     <a href="https://www.1800runaway.org/youth-teens">
-                        https://www.1800runaway.org/youth-teens
+                        1800runaway.org/youth-teens
                     </a>
                 </li>
             </ul>
@@ -165,7 +168,7 @@
                 <li>
                     Free meal: 
                     <a href="https://lasagnalove.org/request/">
-                        https://lasagnalove.org/request/
+                        lasagnalove.org/request/
                     </a> 
                     (US/Canada/Australia) 
                 </li>
@@ -281,37 +284,70 @@
             (surgery,healthcare,moving and more)
             <ul>
                 <li>
-                    Jim Collins Grant for gender confirming surgery: <a href="https://jimcollinsfoundation.org/apply/">https://jimcollinsfoundation.org/apply/</a><br>
+                    Jim Collins Grant for gender confirming surgery: 
+                    <a href="https://jimcollinsfoundation.org/apply/">
+                        jimcollinsfoundation.org/
+                    </a>
                 </li>
                 <li>
-                    Trans justice fundraiser: <a href="https://www.transjusticefundingproject.org/apply/">https://www.transjusticefundingproject.org/apply/</a><br>
+                    Trans justice fundraiser: 
+                    <a href="https://www.transjusticefundingproject.org/apply/">
+                        transjusticefundingproject.org/
+                    </a>
                 </li>
                 <li>
-                    Gender care grant: <a href="https://www.genderbands.org/grants">https://www.genderbands.org/grants</a><br>
+                    Gender care grant: 
+                    <a href="https://www.genderbands.org/grants">
+                        genderbands.org/grants
+                    </a>
                 </li>
                 <li>
-                    POP Surgery grant: <a href="https://www.pointofpride.org/annual-transgender-surgery-fund">https://www.pointofpride.org/annual-transgender-surgery-fund</a><br>
+                    POP Surgery grant: 
+                    <a href="https://www.pointofpride.org/annual-transgender-surgery-fund">
+                        pointofpride.org/annual-transgender-surgery-fund
+                    </a>
                 </li>
                 <li>
-                    Trans United grant: <a href="https://tufforg.wixsite.com/tuffnew/apply">https://tufforg.wixsite.com/tuffnew/apply</a><br>
+                    Trans United grant: 
+                    <a href="https://tufforg.wixsite.com/tuffnew/apply">
+                        tufforg.wixsite.com/tuffnew/apply
+                    </a>
                 </li>
                 <li>
-                    Healthcare: <a href="https://ariannas-center.org/causes/stipend-request/">https://ariannas-center.org/causes/stipend-request/</a><br>
+                    Healthcare: 
+                    <a href="https://ariannas-center.org/causes/stipend-request/">
+                        ariannas-center.org/stipend-request/
+                    </a>
                 </li>
                 <li>
-                    US trans grant: <a href="https://www.loftgaycenter.org/transmission">https://www.loftgaycenter.org/transmission</a><br>
+                    US trans grant: 
+                    <a href="https://www.loftgaycenter.org/transmission">
+                        loftgaycenter.org/transmission
+                    </a>
                 </li>
                 <li>
-                    Black trans masc top surgery grant: <a href="https://blacktransmen.org/top-surgery-grant/">https://blacktransmen.org/top-surgery-grant/</a><br>
+                    Black trans masc top surgery grant: 
+                    <a href="https://blacktransmen.org/top-surgery-grant/">
+                        blacktransmen.org/top-surgery-grant/
+                    </a>
                 </li>
                 <li>
-                    BIPOC trans masc surgery fund: <a href="https://www.dembois.org/apply-for-a-grant">https://www.dembois.org/apply-for-a-grant</a><br>
+                    BIPOC trans masc surgery fund: 
+                    <a href="https://www.dembois.org/apply-for-a-grant">
+                        dembois.org/apply-for-a-grant
+                    </a>
                 </li>
                 <li>
-                    Autistic BIPOC grant: <a href="https://autismandrace.com/autistic-people-of-color-fund/faqs/">https://autismandrace.com/autistic-people-of-color-fund/faqs/</a><br>
+                    Autistic BIPOC grant: 
+                    <a href="https://autismandrace.com/autistic-people-of-color-fund/faqs/">
+                        autismandrace.com/autistic-people-of-color-fund/faqs/
+                    </a>
                 </li>
                 <li>
-                    Black trans grants: <a href="https://www.forthegworls.com/home">https://www.forthegworls.com/home</a><br>
+                    Black trans grants: 
+                    <a href="https://www.forthegworls.com/home">
+                        forthegworls.com/home
+                    </a>
                 </li>
             </ul>
         </p>
@@ -321,11 +357,11 @@
         <p>
             <b>What job sites are good?</b> 
             <a href="https://www.mygwork.com/en/my-g-news/best-websites-for-lgbt-people-to-find-jobs">
-                https://www.mygwork.com/en/my-g-news/best-websites-for-lgbt-people-to-find-jobs
+                mygwork.com/ - best websites for lgbt people to find jobs
             </a><br>
             Find a job without a college degree: 
             <a href="https://jobs.nodegree.com">
-                https://jobs.nodegree.com
+                jobs.nodegree.com
             </a>
         </p>
 
@@ -335,22 +371,34 @@
 
         <ol type="A">
             <li>
-                <a href="https://www.jobboard.lgbt/browse-jobs/">https://www.jobboard.lgbt/browse-jobs/</a> 
+                <a href="https://www.jobboard.lgbt/browse-jobs/">
+                    jobboard.lgbt/browse-jobs/
+                </a> 
             </li>
             <li>
-                <a href="https://queeroutdoors.net/job-board">https://queeroutdoors.net/job-board</a> 
+                <a href="https://queeroutdoors.net/job-board">
+                    queeroutdoors.net/job-board
+                </a> 
             </li>
             <li>
-                <a href="https://lgbt.net/jobs/">https://lgbt.net/jobs/</a> 
+                <a href="https://lgbt.net/jobs/">
+                    lgbt.net/jobs/
+                </a> 
             </li>
             <li>
-                <a href="https://www.diversityjobs.com/community-for-lgbtqia/">https://www.diversityjobs.com/community-for-lgbtqia/</a> 
+                <a href="https://www.diversityjobs.com/community-for-lgbtqia/">
+                    diversityjobs.com/community-for-lgbtqia/
+                </a> 
             </li>
             <li>
-                <a href="https://campuspride.jobs">https://campuspride.jobs</a> 
+                <a href="https://campuspride.jobs">
+                    campuspride.jobs
+                </a> 
             </li>
             <li>
-                <a href="https://pink-jobs.com">https://pink-jobs.com</a> 
+                <a href="https://pink-jobs.com">
+                    pink-jobs.com
+                </a> 
             </li>
         </ol>
 
@@ -358,7 +406,9 @@
 
         <ol type="A">
             <li>
-                <a href="https://www.lgbtqcenters.org/Careers">https://www.lgbtqcenters.org/Careers</a>
+                <a href="https://www.lgbtqcenters.org/Careers">
+                    lgbtqcenters.org/Careers
+                </a>
             </li>
         </ol>
 
@@ -367,15 +417,15 @@
         <p>
             US: 
             <a href="https://www.hrc.org/resources/workplace">
-                https://www.hrc.org/resources/workplace
+                hrc.org/resources/workplace
             </a><br>
             UK: 
             <a href="https://www.citizensadvice.org.uk/law-and-courts/discrimination/discrimination-because-of-sex-or-sexual-orientation/discrimination-because-of-sexual-orientation/">
-                https://www.citizensadvice.org.uk/law-and-courts/discrimination/discrimination-because-of-sex-or-sexual-orientation/discrimination-because-of-sexual-orientation/
+                citizensadvice.org.uk/ - discrimination because of sex or sexual orientation
             </a><br>
             Canada: 
             <a href="https://www.chrc-ccdp.gc.ca/en/about-human-rights/what-discrimination">
-                https://www.chrc-ccdp.gc.ca/en/about-human-rights/what-discrimination
+                chrc-ccdp.gc.ca/ - what is discrimination
             </a><br>
         </p>
 
@@ -448,7 +498,7 @@
         <p>
             University of Michigan’s Resume Guide: 
             <a href="https://careercenter.umich.edu/article/resume-resources">
-                https://careercenter.umich.edu/article/resume-resources
+                careercenter.umich.edu/resume-resources
             </a><br>
         </p>
         <p>
@@ -491,7 +541,7 @@
                 They shouldn't ask about your race,religion,sexuality or gender identity. Only things relating to the job.<br>
                 See what is allowed: <br>
                 <a href="https://www.bridgespan.org/insights/nonprofit-hiring-toolkit/conducting-successful-interviews/legal-and-illegal-interview-questions">
-                    https://www.bridgespan.org/insights/nonprofit-hiring-toolkit/conducting-successful-interviews/legal-and-illegal-interview-questions
+                    bridgespan.org/ - Legal and Illegal Interview Questions
                 </a>
             </li>
             <li>
@@ -527,24 +577,28 @@
                 <li>
                     Low income scholarships:
                     <a href="https://horatioalger.org/scholarships/ ">
-                        https://horatioalger.org/scholarships/ </a>
+                        horatioalger.org/scholarships/ </a>
                     (65k or less,as well as other criteria)
                 </li>
                 <li>
                     LGBT scholarships: 
                     <ul>
                         <li>
-                            <a href="https://www.hrc.org/resources/scholarships">https://www.hrc.org/resources/scholarships</a>
+                            <a href="https://www.hrc.org/resources/scholarships">
+                                hrc.org/scholarships
+                            </a>
                         </li>
                         <li>
-                            <a href="https://pointfoundation.org/scholarships">https://pointfoundation.org/scholarships</a> (LGBT and BIPOC)
+                            <a href="https://pointfoundation.org/scholarships">
+                                pointfoundation.org/scholarships
+                            </a> (LGBT and BIPOC)
                         </li>
                     </ul>
                 </li>
                 <li>
                     Easy to apply scholarships (no essays, no gpa, etc): 
                     <a href="https://www.niche.com/colleges/scholarships/?easy=easy-scholarships">
-                        https://www.niche.com/colleges/scholarships/?easy=easy-scholarships
+                        niche.com/ - colleges scholarships - easy scholarships
                     </a>
                 </li>
                 <li>
@@ -552,29 +606,33 @@
                     <ol type="A">
                         <li>
                             <a href="https://www.scholarships.com/financial-aid/college-scholarships/scholarships-by-type/minority-scholarships/african-american-scholarships">
-                                https://www.scholarships.com/financial-aid/college-scholarships/scholarships-by-type/minority-scholarships/african-american-scholarships
+                                scholarships.com/african-american-scholarships
                             </a>
                         </li>
                         <li>
                             <a href="https://www.bestcolleges.com/resources/black-student-scholarships/">
-                                https://www.bestcolleges.com/resources/black-student-scholarships/
+                                bestcolleges.com/black-student-scholarships/
                             </a>
                         </li>
                     </ol>
                 </li>
                 <li>
                     Hispanic students scholarship:<br>
-                    <a href="https://www.hsf.net/scholarship">https://www.hsf.net/scholarship</a> 
+                    <a href="https://www.hsf.net/scholarship">
+                        hsf.net/scholarship
+                    </a> 
                 </li>
                 <li>
                     Homeless and formerly homeless scholarships: 
                     <a href="https://www.scholarships.com/financial-aid/college-scholarships/scholarship-directory/special-attributes/homeless-formerly-homeless">
-                        https://www.scholarships.com/financial-aid/college-scholarships/scholarship-directory/special-attributes/homeless-formerly-homeless
+                        scholarships.com/homeless-formerly-homeless
                     </a>
                 </li>
                 <li>
                     Resources for undocumented students: <br>
-                    <a href="https://www.ohe.state.mn.us/mPg.cfm?pageID=1586">https://www.ohe.state.mn.us/mPg.cfm?pageID=1586</a><br>
+                    <a href="https://www.ohe.state.mn.us/mPg.cfm?pageID=1586">
+                        ohe.state.mn.us/
+                    </a><br>
                     (scholarships,financial aid, and more)
                 </li>
             </ul>
