shortened some url texts

--- a/nonbinary_and_intersex_resources.html
+++ b/nonbinary_and_intersex_resources.html
@@ -271,7 +271,7 @@
         <p>
             Resource list including Nonbinary HRT & surgery options, and many other topics
             <a href="https://www.transgendermap.com/welcome/for-trans-people/gender-diverse/">
-                https://www.transgendermap.com/welcome/for-trans-people/gender-diverse/
+                transgendermap.com/for-trans-people/gender-diverse/
             </a>
         </p>
         <p>
