--- a/pages/bipoc_resources.html
+++ b/pages/bipoc_resources.html
@@ -7,13 +7,13 @@
         <p>
             What is intersectionality? <br>
             <a href="https://www.youtube.com/watch?v=EXJ4Dbdm1ks">
-                https://www.youtube.com/watch?v=EXJ4Dbdm1ks
+                youtube.com/watch?v=EXJ4Dbdm1ks
             </a> 
         </p>    
         <p>
             How does being LGBT and BIPOC overlap with pride? <br>
             <a href="https://www.nbcnews.com/think/opinion/white-gay-privilege-exists-all-year-it-particularly-hurtful-during-ncna1024961">
-                https://www.nbcnews.com/think/opinion/white-gay-privilege-exists-all-year-it-particularly-hurtful-during-ncna1024961
+                nbcnews.com/ - white gay privilege exists all year it particularly hurtful during ncna1024961
             </a> 
             (TW: stone wall, white privilege,etc)
         </p>
@@ -22,7 +22,7 @@
         <p>
             Organizations by state: 
             <a href="https://marshap.org">
-                https://marshap.org
+                marshap.org
             </a>
         </p>
 
@@ -31,29 +31,29 @@
         <ul>
             <li>
                 <a href="https://blacktransmen.org">
-                    https://blacktransmen.org
+                    blacktransmen.org
                 </a> 
                 and 
                 <a href="https://blacktranswomen.org">
-                    https://blacktranswomen.org
+                    blacktranswomen.org
                 </a> 
             </li>
             <li>
                 Housing, clothing, jobs: 
                 <a href="https://www.themahoganyproject.org/community-center">
-                    https://www.themahoganyproject.org/community-center
+                    themahoganyproject.org/community-center
                 </a>
             </li>
             <li>
                 Trans-Latina: 
                 <a href="https://www.translatinacoalition.org/local-representation">
-                    https://www.translatinacoalition.org/local-representation
+                    translatinacoalition.org/local-representation
                 </a> 
             </li>
             <li>
                 LGBT & AIDs walk Austin: 
                 <a href="https://allgo.org/about-us/">
-                    https://allgo.org/about-us/
+                    allgo.org/about-us/
                 </a> 
             </li>
         </ul>
@@ -64,11 +64,13 @@
 
         <ul>
             <li>
-                <a href="https://www.sasmha.org/lgbtq">https://www.sasmha.org/lgbtq</a>
+                <a href="https://www.sasmha.org/lgbtq">
+                    sasmha.org/lgbtq
+                </a>
             </li>
             <li>
                 <a href="https://www.hrc.org/resources/coming-out-living-authentically-as-lgbtq-asian-and-pacific-islander-america">
-                    https://www.hrc.org/resources/coming-out-living-authentically-as-lgbtq-asian-and-pacific-islander-america
+                    hrc.org/ - coming out living authentically as lgbtq asian and pacific islander america
                 </a> 
             </li>
         </ul>
@@ -78,11 +80,15 @@
         <p>
             <li>
                 2 Spirit and Indigenous people resources:
-                <a href="https://guides.library.utoronto.ca/c.php?g=252092&p=5061887">https://guides.library.utoronto.ca/c.php?g=252092&p=5061887</a><br>
+                <a href="https://guides.library.utoronto.ca/c.php?g=252092&p=5061887">
+                    guides.library.utoronto.ca/
+                </a><br>
             </li>
             <li>
                 BIPOC, 2spirit, indigenous resources:
-                <a href="https://guides.wpl.winnipeg.ca/2SLGBTQQIA/organizations">https://guides.wpl.winnipeg.ca/2SLGBTQQIA/organizations</a>
+                <a href="https://guides.wpl.winnipeg.ca/2SLGBTQQIA/organizations">
+                    guides.wpl.winnipeg.ca/2SLGBTQQIA/organizations
+                </a>
             </li>
         </p>
 
@@ -91,28 +97,44 @@
             <li>
                 It gets better project, bipoc youth<br>
                 <a href="https://itgetsbetter.org/get-help/organizations-serving-the-black-lgbtq-community/">
-                    https://itgetsbetter.org/get-help/organizations-serving-the-black-lgbtq-community/
+                    itgetsbetter.org/ - organizations serving the black lgbtq community
                 </a>
             </li>
             <li>
-                BEAM: <a href="https://beam.community">https://beam.community</a><br>
+                BEAM: <a href="https://beam.community">
+                    beam.community
+                </a><br>
             </li>
             <li>
                 We are native, lgbt health:
-                <a href="https://www.wernative.org/my-relationships/sexual-health/lgbt-two-spirit">https://www.wernative.org/my-relationships/sexual-health/lgbt-two-spirit</a><br>
+                <a href="https://www.wernative.org/my-relationships/sexual-health/lgbt-two-spirit">
+                    wernative.org/lgbt-two-spirit
+                </a><br>
             </li>
             <li>
-                NQTTCN: <a href="https://nqttcn.com/en/">https://nqttcn.com/en/</a><br>
+                NQTTCN: 
+                <a href="https://nqttcn.com/en/">
+                    nqttcn.com/
+                </a><br>
             </li>
             <li>
-                Therapy for black girls: <a href="https://therapyforblackgirls.com">https://therapyforblackgirls.com</a><br>
+                Therapy for black girls: 
+                <a href="https://therapyforblackgirls.com">
+                    therapyforblackgirls.com
+                </a><br>
             </li>
             <li>
-                Melanin and mental health: <a href="https://www.melaninandmentalhealth.com">https://www.melaninandmentalhealth.com</a><br>
+                Melanin and mental health: 
+                <a href="https://www.melaninandmentalhealth.com">
+                    melaninandmentalhealth.com
+                </a><br>
             </li>
             <li>
                 Online Zoom class for Yoga & Meditation <br>
-                BIPOC Rest for Resistance: <a href="https://restforresistance.com/rest">https://restforresistance.com/rest</a><br>
+                BIPOC Rest for Resistance: 
+                <a href="https://restforresistance.com/rest">
+                    restforresistance.com/rest
+                </a><br>
             </li>
         </ul>
     </div>
