--- a/pages/medically_transitioning.html
+++ b/pages/medically_transitioning.html
@@ -16,7 +16,7 @@
             <u>What are the effects of HRT?</u><br>
             for Trans men(testosterone) and Trans women(estrogen): <br>
             <a href="https://www.gendergp.com/hrt-timelines-hormones-effects/">
-                https://www.gendergp.com/hrt-timelines-hormones-effects/
+                gendergp.com/hrt-timelines-hormones-effects/
             </a><br>
             FYI-Both Cis & Trans People can have similar effects from hormone levels side effects.<br>
             Ex: both cis and trans men may or may not be impacted by baldness. <br>
@@ -29,13 +29,13 @@
             <li>
                 PP-How to inject hrt: 
                 <a href="https://www.plannedparenthood.org/planned-parenthood-western-pennsylvania/patients/introducing-hormone-therapy/hormone-therapy-self-injection-tutorials">
-                    https://www.plannedparenthood.org/planned-parenthood-western-pennsylvania/patients/introducing-hormone-therapy/hormone-therapy-self-injection-tutorials
+                    plannedparenthood.org/hormone-therapy-self-injection-tutorials
                 </a>
             </li>
             <li>
                 PDF version of how to inject hrt: 
                 <a href="https://www.plannedparenthood.org/uploads/filer_public/fc/b0/fcb07ab8-4f33-4e1b-8b15-3754c34e3aae/pplm_gender_affirming_hormone_therapy_injection_guide_2.pdf">
-                    https://www.plannedparenthood.org/uploads/filer_public/fc/b0/fcb07ab8-4f33-4e1b-8b15-3754c34e3aae/pplm_gender_affirming_hormone_therapy_injection_guide_2.pdf
+                    plannedparenthood.org/pplm_gender_affirming_hormone_therapy_injection_guide
                 </a>
             </li>
         </ul>
@@ -45,20 +45,32 @@
             <i>TW: needles are shown in videos, for educational purposes.</i><br>
             <ul>
                 <li>
-                    Step1: <a href="https://www.youtube.com/watch?v=ApWiQH4rzlA">https://www.youtube.com/watch?v=ApWiQH4rzlA</a><br>
+                    Step1: 
+                    <a href="https://www.youtube.com/watch?v=ApWiQH4rzlA">
+                        youtube.com/watch?v=ApWiQH4rzlA
+                    </a><br>
                 </li>
                 <li>
-                    Intramuscular injection: <a href="https://www.youtube.com/watch?v=FgCCO9Gqt1Q">https://www.youtube.com/watch?v=FgCCO9Gqt1Q</a><br>
+                    Intramuscular injection: 
+                    <a href="https://www.youtube.com/watch?v=FgCCO9Gqt1Q">
+                        youtube.com/watch?v=FgCCO9Gqt1Q
+                    </a><br>
                 </li>
                 <li>
-                    Subcutaneous Injection: <a href="https://www.youtube.com/watch?v=DJd02xCNNc0">https://www.youtube.com/watch?v=DJd02xCNNc0</a><br>
+                    Subcutaneous Injection: 
+                    <a href="https://www.youtube.com/watch?v=DJd02xCNNc0">
+                        youtube.com/watch?v=DJd02xCNNc0
+                    </a><br>
                 </li>
             </ul>
             <b>Follow your doctor’s instructions on your vile, ask your doctor which method is best.</b>
         </p>
         <p>
             Afraid of needles or get weekly shot anxiety?<br>
-            Try an auto injector: <a href="https://unionmedico.com/product/super-grip/">https://unionmedico.com/product/super-grip/</a><br>
+            Try an auto injector: 
+            <a href="https://unionmedico.com/product/super-grip/">
+                unionmedico.com/super-grip/
+            </a><br>
         </p>
 
         <h2 id="methods_of_hrt">Methods of HRT</h2>
@@ -92,7 +104,9 @@
                     “Andro-Gel” for testosterone (or gel for estrogen HRT to rub into skin) - risk to spread to other humans and pets in household
                 </li>
                 <li>
-                    Long Term injections 5x a year called “aveed” (testosterone) - ask your doctor about potential risks (mine made me stay 30 mins after shot in case of rare side effect. I was fine)
+                    Long Term injections 5x a year called “aveed” (testosterone) - 
+                    ask your doctor about potential risks 
+                    (mine made me stay 30 mins after shot in case of rare side effect. I was fine)
                 </li>
                 <li>
                     Topical cream for estrogen (atrophy of genitals, not main source)
@@ -145,13 +159,22 @@
 
         <ul>
             <li>
-                Trans Masc-Surgery options & doctors:<a href="https://www.ftmsurgery.net">https://www.ftmsurgery.net</a> 
+                Trans Masc-Surgery options & doctors:
+                <a href="https://www.ftmsurgery.net">
+                    ftmsurgery.net
+                </a> 
             </li>
             <li>
-                Nonbinary/Intersex options:<a href="https://salmacian.org">https://salmacian.org</a> 
+                Nonbinary/Intersex options:
+                <a href="https://salmacian.org">
+                    salmacian.org
+                </a> 
             </li>
             <li>
-                Trans Fem-Surgery options & doctors:<a href="https://www.mtfsurgery.net">https://www.mtfsurgery.net</a> 
+                Trans Fem-Surgery options & doctors:
+                <a href="https://www.mtfsurgery.net">
+                    mtfsurgery.net
+                </a> 
             </li>
         </ul>
 
@@ -169,43 +192,43 @@
             <li>
                 Jim Collins Grant for gender confirming surgery: 
                 <a href="https://jimcollinsfoundation.org/apply/">
-                    https://jimcollinsfoundation.org/apply/
+                    jimcollinsfoundation.org/apply/
                 </a>
             </li>
             <li>
                 Trans justice fundraiser: 
                 <a href="https://www.transjusticefundingproject.org/apply/">
-                    https://www.transjusticefundingproject.org/apply/
+                    transjusticefundingproject.org/apply/
                 </a>
             </li>
             <li>
                 Gender care grant:
                 <a href="https://www.genderbands.org/grants">
-                    https://www.genderbands.org/grants
+                    genderbands.org/grants
                 </a> 
             </li>
             <li>
                 POP Surgery grant:
                 <a href="https://www.pointofpride.org/annual-transgender-surgery-fund">
-                    https://www.pointofpride.org/annual-transgender-surgery-fund
+                    pointofpride.org/annual-transgender-surgery-fund
                 </a> 
             </li>
             <li>
                 Trans United grant:
                 <a href="https://tufforg.wixsite.com/tuffnew/apply">
-                    https://tufforg.wixsite.com/tuffnew/apply
+                    tufforg.com/tuffnew/apply
                 </a> 
             </li>
             <li>
                 Black trans masc top surgery grant:
                 <a href="https://blacktransmen.org/top-surgery-grant/">
-                    https://blacktransmen.org/top-surgery-grant/
+                    blacktransmen.org/top-surgery-grant/
                 </a> 
             </li>
             <li>
                 BIPOC trans masc surgery fund:
                 <a href="https://www.dembois.org/apply-for-a-grant">
-                    https://www.dembois.org/apply-for-a-grant
+                    dembois.org/apply-for-a-grant
                 </a> 
             </li>
         </ul>
