--- a/pages/pregnancy_and_parenting.html
+++ b/pages/pregnancy_and_parenting.html
@@ -14,14 +14,16 @@
 
         <p>
             <a href="https://www.badoulatrainings.org/blog/our-favorite-queer-and-trans-centered-resources-for-families-and-birth-workers">
-                https://www.badoulatrainings.org/blog/our-favorite-queer-and-trans-centered-resources-for-families-and-birth-workers
+                badoulatrainings.org/ - our favorite queer and trans centered resources for families and birth workers
             </a>
         </p>
 
         <h3>Facebook groups for LGBT pregnancy & parents around the world</h3>
 
         <p>
-            <a href="https://www.facebook.com/mx.seahorse">https://www.facebook.com/mx.seahorse</a> 
+            <a href="https://www.facebook.com/mx.seahorse">
+                facebook.com/mx.seahorse
+            </a> 
             (They are a shared account amongst admins who post updates about global resources for online & IRL support groups, doulas, etc)
         </p>
 
@@ -30,7 +32,7 @@
         <ul>
             <li>
                 <a href="https://www.plannedparenthood.org/blog/can-transgender-men-get-pregnant#:~:text=Gender%20affirming%20hormone%20therapy%20—%20including,and%20ovaries%2C%20and%20are%20ovulating">
-                    https://www.plannedparenthood.org/blog/can-transgender-men-get-pregnant#:~:text=Gender%20affirming%20hormone%20therapy%20—%20including,and%20ovaries%2C%20and%20are%20ovulating
+                    plannedparenthood.org/ - can transgender men get pregnant
                 </a>
             </li>
         </ul>
@@ -46,7 +48,7 @@
                 </li>
                 <li>
                     <a href="https://helloclue.com/articles/lgbt/what-it-s-like-to-be-pregnant-as-a-transmasculine-person">
-                        https://helloclue.com/articles/lgbt/what-it-s-like-to-be-pregnant-as-a-transmasculine-person
+                        helloclue.com/ - what it's like to be pregnant as a transmasculine person
                     </a>
                 </li>
             </ul>
@@ -65,11 +67,15 @@
 
         <p>
             “My Pregnant Husband” on TLC<br>
-            <a href="https://www.youtube.com/watch?v=jWvjv0RTcv4">https://www.youtube.com/watch?v=jWvjv0RTcv4</a> 
+            <a href="https://www.youtube.com/watch?v=jWvjv0RTcv4">
+                youtube.com/watch?v=jWvjv0RTcv4
+            </a> 
         </p>
         <p>
             “Seahorse” the documentary about a Trans Man who gave birth<br>
-            <a href="https://seahorsefilm.com">https://seahorsefilm.com</a> 
+            <a href="https://seahorsefilm.com">
+                seahorsefilm.com
+            </a> 
         </p>
 
         <h2 id="raising_a_trans_kid">Raising a transgender kid</h2>
